# matsuzawa-20260211-3

./: pyproject.toml
.github/actions/run-claude-code/: action.yml
.github/actions/run-open-code/: action.yml
.github/workflows/: run_experiment_validator.yml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-0-qwen3-gsm8k.yaml  proposed-qwen3-gsm8k.yaml
config/runs/: proposed-qwen3-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
